# raspberry_car_controller

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  out_0.avi  out_1.avi  speedtest.csv
OpenCvVideoSim/: CMakeLists.txt  main.cpp
src/core/: cbit.cpp  controller.cpp  data_interface.cpp  data_transceiver.c  data_transceiver.cpp  health_status.cpp  joystick.cpp  keyboard_input.cpp  keymap.cpp  logger.c  logger.cpp  tracker.cpp  tracker.cpp.autosave  utils.cpp  video_algo.cpp  video_interface.cpp  video_receiver.c  video_receiver.cpp  video_renderer.c  video_renderer.cpp  widgets.cpp
src/include/: cbit.h  controller.h  data_interface.h  data_server.h  data_transceiver.h  defs.h  health_status.h  joystick.h  keyboard_input.h  keymap.h  logger.h  tracker.h  utils.h  video_algo.h  video_interface.h  video_receiver.h  video_renderer.h  video_server.h  widgets.h
src/main/: data_server.c  data_server.cpp  main.c  main.cpp  video_server.c  video_server.cpp
src/mock_board/: mock  mockboard.c
src/sim_data/: sim  sim_data.cpp
